--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,6 @@ html {
   html {
     font-size: 105%; } }
 body {
-  background: url("images/background.jpg");
-  background-attachment: fixed !important;
-  background-position: center center;
   width: 100%;
   height: 100%;
   font-family: "brandon-grotesque", "josefin sans", "Lato", "verdana", "helvetica neue", "helvetica", "arial", sans-serif;
@@ -46,13 +43,13 @@ body {
   outline: none; }
 
 /* CLEARFIX */
-.clearfix, .wrapper, .clearfix:before, .clearfix:after {
+.clearfix, .clearfix:before, .clearfix:after {
   zoom: 1; }
-  .clearfix:before, .wrapper:before, .clearfix:after, .wrapper:after {
+  .clearfix:before, .clearfix:after {
     content: "\0020";
     display: block;
     height: 0; }
-  .clearfix:after, .wrapper:after {
+  .clearfix:after {
     clear: both; }
 
 @media screen and (min-width: 62.5em) {
@@ -93,6 +90,23 @@ body {
     background: #bd3e62; }
   100% {
     background: #3a85b1; } }
+.more-button, .resume-button {
+  position: relative;
+  float: right;
+  margin-top: 0.8em;
+  margin-right: 0.8em;
+  vertical-align: top;
+  border-width: 1px solid #fff;
+  border-radius: 3px;
+  background-color: rgba(255, 255, 255, 0.3); }
+  .more-button a, .resume-button a {
+    color: #fff;
+    text-align: center;
+    padding: 0.25em 0.75em 0.25em 0.75em;
+    vertical-align: top;
+    display: inline-block;
+    font-weight: bold; }
+
 .profile {
   position: absolute;
   top: 50%;
@@ -121,13 +135,6 @@ body {
       font-size: 1.75rem;
       letter-spacing: 0.1875rem; } }
 
-/*
-.no-touch {
-.photo, .name {
-opacity: 1 !important;
-}
-}
-*/
 /* ABOUT */
 .about {
   text-align: center; }
@@ -148,8 +155,8 @@ opacity: 1 !important;
   text-align: center; }
 
 .icon {
-  width: 2rem;
-  height: 2rem; }
+  width: 2.5rem;
+  height: 2.5rem; }
 
 .quotes {
   list-style: none;
@@ -185,6 +192,11 @@ opacity: 1 !important;
     text-align: center;
     font-size: 1.4375rem;
     margin-bottom: 3.75rem; }
+  .portfolio h3 {
+    text-align: center;
+    font-size: 1.4375rem;
+    max-width: 75%;
+    margin: 3.125rem auto; }
 
 .work {
   color: #999;
@@ -384,11 +396,6 @@ a {
   .contact-button:hover .tooltip {
     opacity: 1; }
 
-/*
-.no-touch .tooltip {
-display: none;
-}
-*/
 /* FOOTER */
 .footer {
   opacity: .9;
@@ -426,15 +433,7 @@ display: none;
   .links li {
     display: inline-block;
     margin: 0 25px;
-    margin: 0 1.5625rem;
-    /*
-    		.paperplane .link-to {
-    			background: #f7ba34;
-    			&:after {
-    				background: #f7ba34;
-    			}
-    		}
-    */ }
+    margin: 0 1.5625rem; }
     .links li a {
       position: relative;
       -webkit-transition: opacity .3s linear;
@@ -442,7 +441,6 @@ display: none;
       .links li a:hover {
         opacity: 0.75; }
     .links li .link-to {
-      width: 120px;
       width: 7.5rem;
       font-size: 14px;
       font-size: 0.875rem;
@@ -450,8 +448,7 @@ display: none;
       position: absolute;
       bottom: 10px;
       bottom: 0.625rem;
-      left: -44px;
-      left: -2.75rem;
+      left: -2.5rem;
       line-height: 100%;
       opacity: 0;
       padding: 6px 0;
@@ -517,11 +514,6 @@ display: none;
   border-bottom: 0.125rem solid #999;
   letter-spacing: 0.125rem; }
 
-/*
-.no-touch .count {
-display: none;
-}
-*/
 .animated:hover {
   -webkit-animation: wobble .75s both;
   animation: wobble 0.75s both; }
@@ -591,17 +583,17 @@ display: none;
 
 .icon {
   display: inline-block;
-  width: 32px;
-  width: 2rem;
-  height: 32px;
-  height: 2rem; }
+  width: 2.5rem;
+  height: 2.5rem; }
 
 .icon-tools {
   fill: #555;
   margin: 30px auto;
   margin: 1.875rem auto;
   display: block;
-  text-align: center; }
+  text-align: center;
+  width: 2rem;
+  height: 2rem; }
 
 .icon-feather {
   width: 25px;
@@ -623,11 +615,6 @@ display: none;
     width: 1.875rem;
     height: 30px;
     height: 1.875rem; } }
-/*
-.icon-paperplane {
-	fill: #f7ba34;
-}
-*/
 .icon-twitter {
   fill: #55ACEE; }
 
@@ -682,5 +669,53 @@ display: none;
   opacity: 0.8; }
 .mfp-zoom-in.mfp-removing.mfp-bg {
   opacity: 0; }
+
+/* LINKS */
+#more, #resume {
+  background: white;
+  padding: 20px 30px;
+  max-width: 1024px;
+  margin: 40px auto;
+  position: relative;
+  height: auto;
+  /*
+  	a {
+  		color: #28BC91;
+  		font-weight: bold;
+  	}
+  */ }
+  #more h1, #resume h1 {
+    font-size: 25px;
+    font-size: 1.5625rem; }
+  #more img, #resume img {
+    width: 100%;
+    height: auto; }
+
+.download-button {
+  max-width: 18.75rem;
+  margin: auto;
+  position: relative; }
+  .download-button .download {
+    text-align: center;
+    color: #fff;
+    display: block;
+    font-weight: bold;
+    background: #3BBCB7;
+    padding: 0.625rem 0;
+    border-radius: 0.3125rem;
+    -webkit-box-shadow: 0 0.1875rem 0 #2a8e69;
+    box-shadow: 0 0.1875rem 0 #2a8e69;
+    -webkit-transition: background .3s linear;
+    transition: background 0.3s linear; }
+    .download-button .download:hover {
+      background: #139390; }
+    .download-button .download:active {
+      position: relative;
+      top: 1px;
+      top: 0.0625rem;
+      -webkit-box-shadow: 0 0.125rem 0 #2a8e69;
+      box-shadow: 0 0.125rem 0 #2a8e69; }
+    .download-button .download span {
+      display: inline-block; }
 
 /*# sourceMappingURL=style.css.map */
